fix: hr margin issue on gap containers

--- a/src/components/_hr.scss
+++ b/src/components/_hr.scss
@@ -7,7 +7,7 @@ hr {
 			// max-height: 2px;
 			width: calc(100% + 1rem);
 			height: 2px;
-			margin: 0 -0.5rem var(--g, 1rem) -0.5rem;
+			margin: 0 -0.5rem;
 
 			// Tema del delimitador
 			//
@@ -39,7 +39,7 @@ hr {
 			// max-width: 2px;
 			width: 2px;
 			height: calc(100% + 1rem);
-			margin: -0.5rem var(--g, 1rem) -0.5rem 0;
+			margin: -0.5rem 0;
 
 			// Tema del delimitador
 			//
@@ -94,6 +94,19 @@ hr {
 		display: block;
 		&:last-child:not(:nth-child(2)) {
 			display: none;
+		}
+	}
+}
+
+[class*="__gapi"] > hr {
+	&.m__hrX {
+		@include extend-viewports-classes(true, $viewports) {
+			margin-bottom: var(--g, var(--gy, 1rem));
+		}
+	}
+	&.m__hrY {
+		@include extend-viewports-classes(true, $viewports) {
+			margin-right: var(--g, var(--gx, 1rem));
 		}
 	}
 }
